Fixed some linting errors, removed es6 code

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -5,6 +5,7 @@
     "removeComments": false,
     "preserveConstEnums": true,
     "target": "ES5",
-    "sourceMap": true
+    "sourceMap": true,
+    "outDir": "build/server"
   }
 }
