--- a/package.json
+++ b/package.json
@@ -3,82 +3,64 @@
   "description": "Landing page for Plex server instance",
   "version": "0.0.1",
   "author": "jordond",
+  "repository": {
+    "url": "git@github.com:jordond/plex-landing"
+  },
+  "license": "MIT",
   "scripts": {
     "init": "npm install",
-    "install": "bower install",
     "start": "node src/server/app.js",
     "test": "gulp test"
   },
   "dependencies": {
-    "body-parser": "^1.8.2",
-    "express": "^4.9.3",
-    "morgan": "^1.1.1",
-    "serve-favicon": "^2.0.1"
+    "body-parser": "^1.14.1",
+    "chalk": "^1.1.1",
+    "express": "^4.13.3",
+    "merge": "^1.2.0",
+    "moment": "^2.10.6",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    "browser-sync": "^1.5.8",
-    "chai": "^1.9.1",
-    "chai-as-promised": "^4.1.1",
-    "chalk": "^0.5.1",
-    "dateformat": "^1.0.8-1.2.3",
-    "debug": "^2.0.0",
-    "del": "^0.1.3",
-    "glob": "^4.0.5",
-    "gulp": "^3.8.10",
-    "gulp-angular-templatecache": "^1.4.2",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-bump": "^0.1.11",
-    "gulp-bytediff": "^0.2.0",
-    "gulp-concat": "^2.3.3",
-    "gulp-csso": "^0.2.9",
-    "gulp-filter": "^1.0.2",
-    "gulp-header": "^1.2.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-inject": "^1.0.1",
-    "gulp-jscs": "^1.1.2",
-    "gulp-jshint": "^1.7.1",
-    "gulp-less": "^3.0.1",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-minify-html": "^0.1.7",
-    "gulp-ng-annotate": "^0.3.2",
-    "gulp-nodemon": "^1.0.4",
+    "babel-polyfill": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "browser-sync": "^2.10.0",
+    "del": "^2.1.0",
+    "glob": "^6.0.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-bump": "^1.0.0",
+    "gulp-cache": "^0.4.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-changed-in-place": "^2.0.3",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-header": "^1.7.1",
+    "gulp-help": "^1.6.1",
+    "gulp-if": "^2.0.0",
+    "gulp-inject": "^3.0.0",
+    "gulp-jshint": "^1.12.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-nodemon": "^2.0.4",
     "gulp-order": "^1.1.1",
-    "gulp-plumber": "^0.6.6",
-    "gulp-print": "^1.1.0",
-    "gulp-rev": "^1.1.0",
-    "gulp-rev-replace": "^0.3.1",
-    "gulp-sourcemaps": "^1.5.1",
-    "gulp-task-listing": "^1.0.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-useref": "^1.0.2",
-    "gulp-util": "^3.0.1",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.24",
-    "karma-chai": "^0.1.0",
-    "karma-chai-sinon": "^0.1.3",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-coverage": "^0.2.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-growl-reporter": "^0.1.1",
-    "karma-mocha": "^0.1.4",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sinon": "^1.0.3",
-    "lodash": "^2.4.1",
-    "merge2": "^0.3.4",
-    "method-override": "^1.0.2",
-    "minimist": "^1.1.0",
-    "mocha": "^1.20.1",
-    "mocha-clean": "^0.4.0",
-    "node-notifier": "^4.0.3",
-    "phantomjs": "1.9.9",
-    "plato": "^1.2.0",
-    "q": "^1.0.1",
-    "sinon": "^1.12.2",
-    "sinon-chai": "^2.6.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-print": "^2.0.1",
+    "gulp-remember": "^0.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-task-listing": "^1.0.1",
+    "gulp-tslint": "^3.6.0",
+    "gulp-typescript": "^2.9.2",
+    "gulp-util": "^3.0.7",
+    "jshint-stylish": "^2.1.0",
+    "lodash": "^3.10.1",
+    "main-bower-files": "^2.9.0",
+    "plato": "^1.5.0",
     "typescript": "^1.6.2",
-    "wiredep": "^2.1.0",
-    "yargs": "^1.3.3"
+    "wrench": "^1.5.8",
+    "yargs": "^3.30.0"
   }
 }
