Moved away from commonjs modules, sticking with es6 for now
More work on the gulp file, sourcemaps not working due to
bug with the gulp-babel package, waiting for resolution.

Also switched to using a nightly of typescript, because of issue
with importing npm modules that don't have a default export ex moment/chalk

Next up is to retweak the server router, and do frontend webpack stuff

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
 			"type": "node",
 			"request": "launch",
 			"program": "build/server/index.js",
-			"stopOnEntry": true,
+			"stopOnEntry": false,
 			"args": [],
 			"cwd": ".",
 			"runtimeExecutable": null,
@@ -17,13 +17,13 @@
 				"NODE_ENV": "development"
 			},
 			"externalConsole": false,
-			"sourceMaps": true,
+			"sourceMaps": false,
 			"outDir": null
 		},
 		{
 			"name": "Attach",
-			"type": "node",
 			"request": "attach",
+      "address": "10.0.0.2",
 			"port": 5858
 		}
 	]
