--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-runtime": "^6.2.0",
     "browser-sync": "^2.10.0",
     "del": "^2.1.0",
     "glob": "^6.0.1",
@@ -59,7 +60,7 @@
     "lodash": "^3.10.1",
     "main-bower-files": "^2.9.0",
     "plato": "^1.5.0",
-    "typescript": "^1.6.2",
+    "typescript": "^1.8.0-dev.20151121",
     "wrench": "^1.5.8",
     "yargs": "^3.30.0"
   }
