--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,7 +3,6 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "target": "ES6",
-    "module": "system"
+    "target": "ES6"
   }
 }
