--- a/package.json
+++ b/package.json
@@ -13,20 +13,31 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-material": "^0.11.4",
+    "angular-ui-router": "^0.2.15",
     "body-parser": "^1.14.1",
     "chalk": "^1.1.1",
     "express": "^4.13.3",
+    "font-awesome": "^4.4.0",
     "merge": "^1.2.0",
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
+    "oclazyload": "^1.0.8",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^0.15.1",
+    "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^6.2.0",
     "browser-sync": "^2.10.0",
+    "css-loader": "^0.23.0",
     "del": "^2.1.0",
+    "file-loader": "^0.8.4",
     "glob": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
@@ -56,12 +67,18 @@
     "gulp-tslint": "^3.6.0",
     "gulp-typescript": "^2.9.2",
     "gulp-util": "^3.0.7",
+    "html-loader": "^0.3.0",
+    "html-webpack-plugin": "^1.7.0",
     "jshint-stylish": "^2.1.0",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.9.0",
+    "node-sass": "^3.4.2",
     "plato": "^1.5.0",
+    "sass-loader": "^3.1.2",
     "source-map-support": "^0.3.3",
+    "style-loader": "^0.13.0",
     "typescript": "^1.8.0-dev.20151121",
+    "webpack": "^1.12.8",
     "wrench": "^1.5.8",
     "yargs": "^3.30.0"
   }
