--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -3,6 +3,7 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "target": "ES6"
+    "target": "ES6",
+    "outDir": "../../build/client"
   }
 }
