--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^0.15.1",
+    "autoprefixer-loader": "^3.1.0",
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^6.2.0",
     "browser-sync": "^2.10.0",
+    "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.0",
     "del": "^2.1.0",
     "file-loader": "^0.8.4",
-    "glob": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
     "gulp-bump": "^1.0.0",
@@ -46,34 +46,26 @@
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
     "gulp-changed-in-place": "^2.0.3",
-    "gulp-concat": "^2.6.0",
     "gulp-filter": "^3.0.1",
     "gulp-header": "^1.7.1",
     "gulp-help": "^1.6.1",
-    "gulp-if": "^2.0.0",
-    "gulp-inject": "^3.0.0",
-    "gulp-jshint": "^1.12.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.0.1",
     "gulp-print": "^2.0.1",
-    "gulp-remember": "^0.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-task-listing": "^1.0.1",
     "gulp-tslint": "^3.6.0",
     "gulp-typescript": "^2.9.2",
     "gulp-util": "^3.0.7",
+    "gulp-webpack": "^1.5.0",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^1.7.0",
-    "jshint-stylish": "^2.1.0",
     "lodash": "^3.10.1",
-    "main-bower-files": "^2.9.0",
+    "ng-annotate": "^1.0.2",
+    "ng-annotate-loader": "0.0.10",
     "node-sass": "^3.4.2",
-    "plato": "^1.5.0",
     "sass-loader": "^3.1.2",
     "source-map-support": "^0.3.3",
     "style-loader": "^0.13.0",
