--- a/package.json
+++ b/package.json
@@ -48,12 +48,8 @@
     "del": "^2.1.0",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
     "gulp-bump": "^1.0.0",
-    "gulp-cache": "^0.4.0",
     "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-changed-in-place": "^2.0.3",
     "gulp-filter": "^3.0.1",
     "gulp-header": "^1.7.1",
     "gulp-help": "^1.6.1",
@@ -65,8 +61,7 @@
     "gulp-rsync": "0.0.5",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^3.6.0",
-    "gulp-typescript": "^2.9.2",
+    "gulp-tslint": "^4.1.0",
     "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
     "html-loader": "^0.3.0",
@@ -77,7 +72,9 @@
     "sass-loader": "^3.1.2",
     "source-map-support": "^0.3.3",
     "style-loader": "^0.13.0",
-    "typescript": "^1.8.0-dev.20151121",
+    "ts-loader": "^0.7.2",
+    "tslint": "^3.0.0",
+    "typescript": "^1.6.2",
     "webpack": "^1.12.8",
     "wrench": "^1.5.8",
     "yargs": "^3.30.0"
