--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "style-loader": "^0.13.0",
     "ts-loader": "^0.7.2",
     "tslint": "^3.0.0",
+    "tslint-loader": "^2.1.0",
     "typescript": "^1.6.2",
     "webpack": "^1.12.8",
     "wrench": "^1.5.8"
