--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "angular-aria": "^1.4.8",
     "angular-material": "^0.11.4",
     "angular-ui-router": "^0.2.15",
+    "bluebird": "^3.0.6",
     "body-parser": "^1.14.1",
     "chalk": "^1.1.1",
     "express": "^4.13.3",
     "font-awesome": "^4.4.0",
     "lodash": "^3.10.1",
     "merge": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "oclazyload": "^1.0.8",
     "serve-favicon": "^2.3.0",
+    "winston": "^2.1.1",
     "yargs": "^3.30.0"
   },
   "devDependencies": {
