Adding in express middleware

--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "bluebird": "^3.0.6",
     "body-parser": "^1.14.1",
     "chalk": "^1.1.1",
+    "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
+    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "font-awesome": "^4.4.0",
+    "helmet": "^0.15.0",
     "lodash": "^3.10.1",
     "merge": "^1.2.0",
+    "method-override": "^2.3.5",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
