--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-polyfill": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^6.2.0",
+    "baggage-loader": "^0.2.4",
     "browser-sync": "^2.10.0",
     "browser-sync-webpack-plugin": "^1.0.1",
     "css-loader": "^0.23.0",
@@ -78,6 +79,7 @@
     "json-loader": "^0.5.4",
     "ng-annotate": "^1.0.2",
     "ng-annotate-loader": "0.0.10",
+    "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "source-map-support": "^0.3.3",
