--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "moment": "^2.10.6",
     "morgan": "^1.6.1",
     "oclazyload": "^1.0.8",
+    "sequelize": "^3.14.2",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
+    "sqlite3": "^3.1.1",
     "winston": "^2.1.1",
     "yargs": "^3.30.0"
   },
