--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sequelize": "^3.14.2",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "sqlite3": "^3.1.1",
     "winston": "^2.1.1",
     "yargs": "^3.30.0"
