Cleaning up and removing old client files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,13 +3,11 @@
     "command": "gulp",
     "isShellCommand": true,
     "args": [
-        "--no-color"
     ],
     "tasks": [
         {
-            "taskName": "serve-dev-debug",
+            "taskName": "dev",
             "args": [
-                "serve-dev",
                 "--debug"
             ],
             "suppressTaskName": true,
